vscode container expect dockerfile and conda-lock file to be inside of .devcontainer

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,7 +2,7 @@
 FROM mcr.microsoft.com/devcontainers/base:ubuntu
 
 # copy all conda environment dependencies
-COPY ../conda-lock.yml /tmp/conda-lock.yml
+COPY conda-lock.yml /tmp/conda-lock.yml
 
 # conda install all the other packages
 RUN mamba update --quiet --file /tmp/conda-lock.yml \
