--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -9,5 +9,7 @@ RUN conda install -n base -c conda-forge conda-lock -y \
     && conda-lock install --name condalock-env /tmp/conda-lock.yml \
     && conda clean --all -y -f
 
-# Activate the condalock-env environment by default inside of your container
-RUN echo "conda activate condalock-env" >> ~/.bashrc
+# Switch to vscode user and set up conda activation
+USER vscode
+RUN conda init bash \
+    && echo "conda activate condalock-env" >> ~/.bashrc
