--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -4,7 +4,9 @@ services:
   devcontainer:
     build: 
       context: .
-      dockerfile: Dockerfile   
+      dockerfile: Dockerfile  
+    volumes:
+      - ../..:/workspaces:cached 
     command: sleep infinity
     deploy:
       resources:
