--- a/environment.yml
+++ b/environment.yml
@@ -3,8 +3,8 @@ channels:
   - conda-forge
 dependencies:
   - python=3.9
-  - numpy
-  - pandas
+  - numpy=
+  - pandas=2.3.1
   - conda-lock
 platforms:
   - linux-aarch64
@@ -12,4 +12,3 @@ platforms:
   - osx-arm64
   - osx-64
   - win-64
-prefix: /Users/skysheng/miniforge3/envs/docker-vscode
