--- a/environment.yml
+++ b/environment.yml
@@ -3,9 +3,9 @@ channels:
   - conda-forge
 dependencies:
   - python=3.9
-  - numpy
+  - numpy=2.0.2
   - pandas=2.3.1
-  - conda-lock
+  - conda-lock=3.0.4
 platforms:
   - linux-aarch64
   - linux-64
